# Eval3d_pipline

./: .gitignore  README.md  requirements.txt
Eval3D/aesthetics/: README.md  (+3 more)
data/: 3dprompts_with_questions.json  prompt_library.json  selected_prompt_ids.json
eval3d-pipeline/: .env  .gitignore  CODE_STRUCTURE.md  README.md  pyproject.toml
eval3d-pipeline/data/test_run/base/: eval3d_scores.json
eval3d-pipeline/data/test_run/base/save/it0-test/batch_data/: 0000.npy  0001.npy  0002.npy  0003.npy  0004.npy  0005.npy  0006.npy  0007.npy  0008.npy  0009.npy  0010.npy  0011.npy  0012.npy  0013.npy  0014.npy  0015.npy  0016.npy  0017.npy  0018.npy  0019.npy  0020.npy  0021.npy  0022.npy  0023.npy  0024.npy  0025.npy  0026.npy  0027.npy  0028.npy  0029.npy  0030.npy  0031.npy  0032.npy  0033.npy  0034.npy  0035.npy  0036.npy  0037.npy  0038.npy  0039.npy  (+80 more)
eval3d-pipeline/data/test_run/base/save/it0-test/normal_world/: 0000.npy  0001.npy  0002.npy  0003.npy  0004.npy  0005.npy  0006.npy  0007.npy  0008.npy  0009.npy  0010.npy  0011.npy  0012.npy  0013.npy  0014.npy  0015.npy  0016.npy  0017.npy  0018.npy  0019.npy  0020.npy  0021.npy  0022.npy  0023.npy  0024.npy  0025.npy  0026.npy  0027.npy  0028.npy  0029.npy  0030.npy  0031.npy  0032.npy  0033.npy  0034.npy  0035.npy  0036.npy  0037.npy  0038.npy  0039.npy  (+80 more)
eval3d-pipeline/src/eval3d_pipeline/: asset_preparation.py  cli.py  config.py  paths.py  render_asset.py  runner.py  summary.py
eval3d-pipeline/src/eval3d_pipeline/metrics/: __init__.py  aesthetics.py  geometric.py  semantic.py  structural.py  text3d.py
(+46 files in other folders)
